--- a/GroupSavingsApi.Tests/GroupSavingsApi.Tests/GroupSavingsApi.Tests.csproj
+++ b/GroupSavingsApi.Tests/GroupSavingsApi.Tests/GroupSavingsApi.Tests.csproj
@@ -15,6 +15,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.8" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GroupSavingsApi.csproj" />
+    <ProjectReference Include="..\GroupSavingsApiNew.csproj" />
   </ItemGroup>
 </Project>
