--- a/GroupSavingsApi.Tests.Solution/GroupSavingsApi.IntegrationTests/GroupSavingsApi.IntegrationTests.csproj
+++ b/GroupSavingsApi.Tests.Solution/GroupSavingsApi.IntegrationTests/GroupSavingsApi.IntegrationTests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
@@ -28,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GroupSavingsApi\GroupSavingsApiNew.csproj" />
+    <ProjectReference Include="..\..\GroupSavingsApi\GroupSavingsApiNew.csproj" />
   </ItemGroup>
 
 </Project>
